# live-platform-LAN

./: README.md
client/: CMakeLists.txt  main.cpp
client/config/: server.config
client/include/: changepasswd.h  mainwindow.h  markdown_highlighter.h  messagepdu.h  mylabel.h  register.h  sign_in.h
client/resource/: resource.qrc
client/src/: changepasswd.cpp  changepasswd.ui  mainwindow.cpp  mainwindow.ui  markdown_highlighter.cpp  mylabel.cpp  register.cpp  register.ui  sign_in.cpp  sign_in.ui
server/: CMakeLists.txt  main.cpp
server/include/: csocket.h  database.h  datahandler.h  messagepdu.h  mytcpserver.h  mytcpsocket.h  server.h
server/src/: csocket.cpp  database.cpp  datahandler.cpp  mytcpserver.cpp  mytcpsocket.cpp  server.cpp
